# frappe-mcp-client

./: LICENSE  README.it.md  README.md  pyproject.toml  setup_git.sh
src/frappe_mcp_client/: __init__.py  client.py  main.py
